--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -87,3 +87,10 @@ fos_user:
     user_class: AppBundle\Entity\Utilisateur
     group:
         group_class: AppBundle\Entity\Group
+        
+# app/config/config.yml (or config/packages/knp_snappy.yaml if using Symfony4 and the Flex recipe)
+knp_snappy:
+    pdf:
+        enabled:    true
+        binary:     "\"C:\\Program Files\\wkhtmltopdf\\bin\\wkhtmltopdf.exe\""
+        options:    []
