--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "php": ">=5.3.9",
         "doctrine/doctrine-bundle": "~1.4",
         "doctrine/orm": "^2.4.8",
+        "dompdf/dompdf": "^0.8.3",
         "friendsofsymfony/user-bundle": "~1.3",
         "incenteev/composer-parameter-handler": "~2.0",
         "knplabs/knp-snappy-bundle": "^1.5",
