--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 !app/cache/.gitkeep
 !app/logs/.gitkeep
 /composer.phar
+/web/quittances
+/web/rapports
+/web/uploads
 
 # Created by https://www.gitignore.io/api/netbeans
 # Edit at https://www.gitignore.io/?templates=netbeans
