Ergonomie, ouverture/fermeture centre et caisse, bugs

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 /web/quittances
 /web/rapports
 /web/uploads
+/web/visites
 
 # Created by https://www.gitignore.io/api/netbeans
 # Edit at https://www.gitignore.io/?templates=netbeans
