Aiguillage sur caisse fermée corrigé Logo dans rapport

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -94,3 +94,7 @@ knp_snappy:
         enabled:    true
         binary:     "\"C:\\Program Files\\wkhtmltopdf\\bin\\wkhtmltopdf.exe\""
         options:    []
+    image:
+        enabled:    true
+        binary:     "\"C:\\Program Files\\wkhtmltopdf\\bin\\wkhtmltoimage.exe\""
+        options:    []
