Bouton rechercher pour lancer la recherche

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -3,7 +3,8 @@ security:
         FOS\UserBundle\Model\UserInterface: sha512
 
     role_hierarchy:
-        ROLE_SUPERVISEUR: [ROLE_USER, ROLE_CAISSIER, ROLE_ENREGISTREMENT, ROLE_DELIVRANCE, ROLE_CONTROLLEUR, ROLE_CAISSIER_PRINCIPAL]
+        ROLE_CAISSIER_PRINCIPAL: [ROLE_USER, ROLE_CAISSIER, ROLE_ENREGISTREMENT, ROLE_DELIVRANCE, ROLE_CONTROLLEUR, ROLE_AIGUILLEUR]
+        ROLE_SUPERVISEUR: ROLE_CAISSIER_PRINCIPAL 
         ROLE_SUPER_ADMIN: ROLE_SUPERVISEUR
 
     providers:
