Ajout du role de sécurité chef de centre Revisite devient visite normale si délai dépassé

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -4,7 +4,8 @@ security:
 
     role_hierarchy:
         ROLE_CAISSIER_PRINCIPAL: [ROLE_USER, ROLE_CAISSIER, ROLE_ENREGISTREMENT, ROLE_DELIVRANCE, ROLE_CONTROLLEUR, ROLE_AIGUILLEUR]
-        ROLE_SUPERVISEUR: ROLE_CAISSIER_PRINCIPAL 
+        ROLE_CHEF_CENTRE: ROLE_CAISSIER_PRINCIPAL 
+        ROLE_SUPERVISEUR: ROLE_CHEF_CENTRE
         ROLE_SUPER_ADMIN: ROLE_SUPERVISEUR
 
     providers:
