Ajout de l'historique des modifs d'un véhicul et des encaissements/remboursement Blocage de l'immatriculation du véhicul à l'aiguillage

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -4,6 +4,16 @@ parameters:
     #parameter_name: value
 
 services:
-    #service_name:
-    #    class: AppBundle\Directory\ClassName
-    #    arguments: ['@another_service_name', 'plain_value', '%parameter_name%']
+    extension.listener:
+        class: AppBundle\Listener\DoctrineExtensionListener
+        calls:
+            - [ setContainer, [ @service_container ] ]
+        tags:
+            # loggable
+            - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest }
+    gedmo.listener.loggable:
+        class: Gedmo\Loggable\LoggableListener
+        tags: 
+            - {name: doctrine.event_subscriber, connection: default}
+        calls:
+            - [setAnnotationReader, ["@annotation_reader"]]
