--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -3,8 +3,7 @@ security:
         FOS\UserBundle\Model\UserInterface: sha512
 
     role_hierarchy:
-        ROLE_CAISSIER_PRINCIPAL: [ROLE_USER, ROLE_CAISSIER, ROLE_ENREGISTREMENT, ROLE_DELIVRANCE, ROLE_CONTROLLEUR, ROLE_AIGUILLEUR]
-        ROLE_CHEF_CENTRE: ROLE_CAISSIER_PRINCIPAL 
+        ROLE_CHEF_CENTRE: [ROLE_CAISSIER_PRINCIPAL, ROLE_USER, ROLE_CAISSIER, ROLE_ENREGISTREMENT, ROLE_DELIVRANCE, ROLE_CONTROLLEUR, ROLE_AIGUILLEUR] 
         ROLE_SUPERVISEUR: ROLE_CHEF_CENTRE
         ROLE_SUPER_ADMIN: ROLE_SUPERVISEUR
 
