Ajout de la gestion des certificats. Le role_secretaire permet de créer et affecter des numéros de série aux controlleurs.

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -28,4 +28,5 @@ security:
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/utilisateur, role: ROLE_SUPER_ADMIN }
         - { path: ^/secretaire, role: ROLE_SECRETAIRE }
+        - { path: ^/chefcentre, role: ROLE_SECRETAIRE }
         - { path: ^/, role: ROLE_USER }
